# bash-classify

./: .gitignore  README.md  SPEC.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/rules/: command-database.md
.github/workflows/: ci.yml  publish.yml
coding-agent-plugins/claude-code/.claude-plugin/: plugin.json
coding-agent-plugins/claude-code/hooks/: classify-bash.sh  hook-permission-request.sh  hook-pre-tool-use.sh  hooks.json
docs/: classification-guidance.md
schemas/: command.schema.json
src/bash_classify/: __init__.py  __main__.py  classifier.py  cli.py  database.py  matcher.py  models.py  parser.py
src/bash_classify/commands/: agent-browser.yaml  apt.yaml  awk.yaml  basename.yaml  bash-classify.yaml  bash.yaml  black.yaml  brew.yaml  builtin.yaml  cargo.yaml  cat.yaml  chgrp.yaml  chmod.yaml  chown.yaml  column.yaml  comm.yaml  command.yaml  cp.yaml  curl.yaml  cut.yaml  date.yaml  df.yaml  diff.yaml  dig.yaml  dirname.yaml  docker.yaml  du.yaml  echo.yaml  env.yaml  eslint.yaml  expand.yaml  false.yaml  file.yaml  find.yaml  fmt.yaml  fold.yaml  free.yaml  gawk.yaml  gcloud.yaml  gh.yaml  (+126 more)
tests/: conftest.py  test_classifier.py  test_cli.py  test_cli_serialization.py  test_database.py  test_matcher.py  test_models.py  test_parser.py  test_real_world.py  test_schema.py  test_smoke.py
