[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bash-classify"
dynamic = ["version"]
description = "Classify bash commands as READONLY, WRITE, DANGEROUS, or UNKNOWN"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Filip Procházka", email = "dev@fprochazka.cz"}
]
keywords = ["bash", "classification", "security", "cli", "tree-sitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Shells",
    "Typing :: Typed",
]
dependencies = [
    "tree-sitter>=0.24",
    "tree-sitter-bash>=0.23",
    "pyyaml>=6.0",
]

[project.scripts]
bash-classify = "bash_classify.cli:main"

[project.urls]
Homepage = "https://github.com/fprochazka/bash-classify"
Repository = "https://github.com/fprochazka/bash-classify"
Issues = "https://github.com/fprochazka/bash-classify/issues"
Documentation = "https://github.com/fprochazka/bash-classify/blob/main/SPEC.md"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "jsonschema>=4.20",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/bash_classify"]
